update concurrent